# capeval

./: .pre-commit-config.yaml  README.md  eval.py  pyproject.toml  setup.py
bleu/: bleu.py  bleu_scorer.py
cider/: cider.py  cider_scorer.py
example/: captions_val2014_fakecap_results.json  coco_eval_example.py
meteor/: meteor.py
rouge/: rouge.py
spice/: get_stanford_models.py  spice.py
tokenizer/: ptbtokenizer.py
